--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@mantine/hooks": "^8.3.9",
     "@orpc/client": "^1.7.5",
     "@orpc/json-schema": "^1.7.5",
     "@orpc/openapi": "^1.7.5",
@@ -58,9 +59,11 @@
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "nitro": "latest",
+    "nuqs": "^2.8.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.67.0",
+    "react-intersection-observer": "^10.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
