--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest run",
-    "postinstall": "prisma generate"
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@mantine/hooks": "^8.3.9",
+    "@neondatabase/serverless": "^1.0.2",
     "@orpc/client": "^1.7.5",
     "@orpc/json-schema": "^1.7.5",
     "@orpc/openapi": "^1.7.5",
     "@orpc/server": "^1.7.5",
     "@orpc/tanstack-query": "^1.7.5",
     "@orpc/zod": "^1.7.5",
-    "@prisma/adapter-neon": "^7.0.1",
-    "@prisma/client": "^7.0.1",
+    "@paralleldrive/cuid2": "^3.0.4",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -56,6 +57,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "nitro": "latest",
@@ -79,8 +81,8 @@
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
     "babel-plugin-react-compiler": "^1.0.0",
+    "drizzle-kit": "^0.31.8",
     "jsdom": "^27.0.0",
-    "prisma": "^7.0.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
