feat: set up Drizzle ORM schemas for core entities and implement link UI components with API validation.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@unpic/react": "^1.0.2",
     "better-auth": "^1.4.3",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
